모니터링 페이지 업데이트 및 수정 그래프 임시 수정 밀림 현상 이해 안됨...

--- a/app/src/main/res/drawable-v24/circle.xml
+++ b/app/src/main/res/drawable-v24/circle.xml
@@ -20,7 +20,8 @@
                 <gradient
                     android:type="sweep"
                     android:centerColor="@color/primary"
-                    android:endColor="@color/red"/>
+                    android:endColor="@color/red"
+                    android:useLevel="false"/>
             </shape>
         </rotate>
     </item>
