--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -16,7 +16,8 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:background="@color/primary_light">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/customlayout01"
@@ -27,7 +28,7 @@
                 android:background="@drawable/white_edge"
                 android:layout_marginStart="5dp"
                 android:layout_marginEnd="5dp"
-                android:elevation="30dp"
+                android:elevation="15dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/layout2">
@@ -108,7 +109,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:orientation="vertical"
-                android:elevation="30dp"
+                android:elevation="15dp"
                 android:background="@drawable/white_edge"
                 android:layout_marginStart="5dp"
                 android:layout_marginEnd="5dp"
@@ -192,7 +193,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:orientation="vertical"
-                android:elevation="30dp"
+                android:elevation="15dp"
                 android:background="@drawable/white_edge"
                 android:layout_marginStart="5dp"
                 android:layout_marginEnd="5dp"
@@ -275,7 +276,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:orientation="vertical"
-                android:elevation="30dp"
+                android:elevation="15dp"
                 android:background="@drawable/white_edge"
                 android:layout_marginStart="5dp"
                 android:layout_marginEnd="5dp"
@@ -358,7 +359,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:orientation="vertical"
-                android:elevation="30dp"
+                android:elevation="15dp"
                 android:background="@drawable/white_edge"
                 android:layout_marginStart="5dp"
                 android:layout_marginEnd="5dp"
@@ -442,7 +443,7 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="20dp"
                 android:orientation="vertical"
-                android:elevation="30dp"
+                android:elevation="15dp"
                 android:background="@drawable/white_edge"
                 android:layout_marginStart="5dp"
                 android:layout_marginEnd="5dp"
@@ -519,17 +520,52 @@
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
+            <androidx.appcompat.widget.LinearLayoutCompat
+                android:id="@+id/linearLayoutCompat"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:background="#354794"
+                android:gravity="center"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <TextView
+                    android:id="@+id/name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="name"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                    android:textColor="@color/white"
+                    android:textStyle="bold"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/appCompatImageView" />
+
+                <TextView
+                    android:id="@+id/textView2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="5dp"
+                    android:text="양식장"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                    android:textColor="@color/white"
+                    android:textStyle="bold"
+                    app:layout_constraintBottom_toBottomOf="@+id/name"
+                    app:layout_constraintStart_toEndOf="@id/name"
+                    app:layout_constraintTop_toTopOf="@+id/name" />
+
+            </androidx.appcompat.widget.LinearLayoutCompat>
+
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/layout2"
-                android:layout_width="300dp"
+                android:layout_width="390dp"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
+                android:layout_marginTop="30dp"
                 android:background="@drawable/white_edge"
-                android:layout_marginTop="50dp"
+                android:backgroundTint="#516AD5"
                 android:elevation="20dp"
+                android:orientation="vertical"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
+                app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@id/layout3"
@@ -540,27 +576,53 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent">
 
-                    <TextView
-                        android:id="@+id/name"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-                        android:textStyle="bold"
+                    <androidx.appcompat.widget.AppCompatImageView
+                        android:id="@+id/appCompatImageView"
+                        android:layout_width="150dp"
+                        android:layout_height="150dp"
+                        android:background="@drawable/fish_icon"
+                        app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <TextView
-                        android:id="@+id/textView2"
+                        android:id="@+id/addr"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="5dp"
-                        android:text="양식장"
+                        android:layout_marginTop="20dp"
+                        android:text="addr"
                         android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                        android:textColor="@color/white"
                         android:textStyle="bold"
-                        app:layout_constraintBottom_toBottomOf="@+id/name"
-                        app:layout_constraintStart_toEndOf="@id/name"
-                        app:layout_constraintTop_toTopOf="parent" />
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/appCompatImageView" />
+
+                    <TextView
+                        android:id="@+id/tel"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="20dp"
+                        android:text="tel"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                        android:textColor="@color/white"
+                        android:textIsSelectable="true"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toStartOf="@+id/ceo"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/addr" />
+
+                    <TextView
+                        android:id="@+id/ceo"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="50dp"
+                        android:text="ceo"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                        android:textColor="@color/white"
+                        app:layout_constraintBottom_toBottomOf="@+id/tel"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="@+id/tel" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -568,10 +630,11 @@
                     android:id="@+id/setb"
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
-                    android:text="완료"
-                    android:elevation="30dp"
                     android:layout_marginTop="30dp"
                     android:layout_marginBottom="20dp"
+                    android:elevation="30dp"
+                    android:text="임계치 수정 완료"
+                    android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -580,10 +643,11 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="220dp"
+                android:layout_width="300dp"
                 android:layout_height="80dp"
                 android:layout_marginTop="20dp"
                 android:layout_marginBottom="20dp"
+                android:elevation="15dp"
                 android:background="@drawable/white_edge"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
