--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -26,8 +26,8 @@
                 android:orientation="vertical"
                 android:layout_marginTop="20dp"
                 android:background="@drawable/white_edge"
-                android:layout_marginStart="5dp"
-                android:layout_marginEnd="5dp"
+                android:layout_marginStart="15dp"
+                android:layout_marginEnd="15dp"
                 android:elevation="15dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -53,14 +53,13 @@
 
                 <EditText
                     android:id="@+id/num1_1"
-                    android:layout_width="65dp"
+                    android:layout_width="100dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="10dp"
+                    android:layout_marginStart="8dp"
                     android:background="@android:color/transparent"
                     android:gravity="center"
-                    android:imeOptions="actionNext"
+                    android:imeOptions="actionDone"
                     android:inputType="numberDecimal"
-                    android:maxLength="5"
                     android:textAppearance="@style/TextAppearance.AppCompat.Large"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="@+id/rangeSlider"
@@ -69,14 +68,13 @@
 
                 <EditText
                     android:id="@+id/num1_2"
-                    android:layout_width="65dp"
+                    android:layout_width="100dp"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="10dp"
                     android:background="@android:color/transparent"
                     android:gravity="center"
                     android:imeOptions="actionDone"
                     android:inputType="numberDecimal"
-                    android:maxLength="5"
                     android:textAppearance="@style/TextAppearance.AppCompat.Large"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="@+id/rangeSlider"
@@ -111,8 +109,8 @@
                 android:orientation="vertical"
                 android:elevation="15dp"
                 android:background="@drawable/white_edge"
-                android:layout_marginStart="5dp"
-                android:layout_marginEnd="5dp"
+                android:layout_marginStart="15dp"
+                android:layout_marginEnd="15dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
@@ -138,14 +136,13 @@
 
                 <EditText
                     android:id="@+id/num2_1"
-                    android:layout_width="65dp"
+                    android:layout_width="100dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
                     android:background="@android:color/transparent"
                     android:gravity="center"
                     android:inputType="numberDecimal"
-                    android:maxLength="5"
-                    android:imeOptions="actionNext"
+                    android:imeOptions="actionDone"
                     android:textAppearance="@style/TextAppearance.AppCompat.Large"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="@+id/rangeSlider2"
@@ -154,13 +151,12 @@
 
                 <EditText
                     android:id="@+id/num2_2"
-                    android:layout_width="65dp"
+                    android:layout_width="100dp"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="10dp"
                     android:background="@android:color/transparent"
                     android:gravity="center"
                     android:inputType="numberDecimal"
-                    android:maxLength="5"
                     android:imeOptions="actionDone"
                     android:textAppearance="@style/TextAppearance.AppCompat.Large"
                     android:textStyle="bold"
@@ -195,8 +191,8 @@
                 android:orientation="vertical"
                 android:elevation="15dp"
                 android:background="@drawable/white_edge"
-                android:layout_marginStart="5dp"
-                android:layout_marginEnd="5dp"
+                android:layout_marginStart="15dp"
+                android:layout_marginEnd="15dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/customlayout02">
@@ -221,14 +217,13 @@
 
                 <EditText
                     android:id="@+id/num3_1"
-                    android:layout_width="65dp"
+                    android:layout_width="100dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
                     android:background="@android:color/transparent"
                     android:gravity="center"
                     android:inputType="numberDecimal"
-                    android:maxLength="5"
-                    android:imeOptions="actionNext"
+                    android:imeOptions="actionDone"
                     android:textAppearance="@style/TextAppearance.AppCompat.Large"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="@+id/rangeSlider3"
@@ -237,13 +232,12 @@
 
                 <EditText
                     android:id="@+id/num3_2"
-                    android:layout_width="65dp"
+                    android:layout_width="100dp"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="10dp"
                     android:background="@android:color/transparent"
                     android:gravity="center"
                     android:inputType="numberDecimal"
-                    android:maxLength="5"
                     android:imeOptions="actionDone"
                     android:textAppearance="@style/TextAppearance.AppCompat.Large"
                     android:textStyle="bold"
@@ -278,8 +272,8 @@
                 android:orientation="vertical"
                 android:elevation="15dp"
                 android:background="@drawable/white_edge"
-                android:layout_marginStart="5dp"
-                android:layout_marginEnd="5dp"
+                android:layout_marginStart="15dp"
+                android:layout_marginEnd="15dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/customlayout03">
@@ -304,14 +298,13 @@
 
                 <EditText
                     android:id="@+id/num4_1"
-                    android:layout_width="65dp"
+                    android:layout_width="100dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
                     android:background="@android:color/transparent"
                     android:gravity="center"
                     android:inputType="numberDecimal"
-                    android:maxLength="5"
-                    android:imeOptions="actionNext"
+                    android:imeOptions="actionDone"
                     android:textAppearance="@style/TextAppearance.AppCompat.Large"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="@+id/rangeSlider4"
@@ -320,13 +313,12 @@
 
                 <EditText
                     android:id="@+id/num4_2"
-                    android:layout_width="65dp"
+                    android:layout_width="100dp"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="10dp"
                     android:background="@android:color/transparent"
                     android:gravity="center"
                     android:inputType="numberDecimal"
-                    android:maxLength="5"
                     android:imeOptions="actionDone"
                     android:textAppearance="@style/TextAppearance.AppCompat.Large"
                     android:textStyle="bold"
@@ -361,8 +353,8 @@
                 android:orientation="vertical"
                 android:elevation="15dp"
                 android:background="@drawable/white_edge"
-                android:layout_marginStart="5dp"
-                android:layout_marginEnd="5dp"
+                android:layout_marginStart="15dp"
+                android:layout_marginEnd="15dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/customlayout04">
@@ -387,14 +379,13 @@
 
                 <EditText
                     android:id="@+id/num5_1"
-                    android:layout_width="65dp"
+                    android:layout_width="100dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
                     android:background="@android:color/transparent"
                     android:gravity="center"
                     android:inputType="numberDecimal"
-                    android:maxLength="5"
-                    android:imeOptions="actionNext"
+                    android:imeOptions="actionDone"
                     android:textAppearance="@style/TextAppearance.AppCompat.Large"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="@+id/rangeSlider5"
@@ -403,13 +394,12 @@
 
                 <EditText
                     android:id="@+id/num5_2"
-                    android:layout_width="65dp"
+                    android:layout_width="100dp"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="10dp"
                     android:background="@android:color/transparent"
                     android:gravity="center"
                     android:inputType="numberDecimal"
-                    android:maxLength="5"
                     android:imeOptions="actionDone"
                     android:textAppearance="@style/TextAppearance.AppCompat.Large"
                     android:textStyle="bold"
@@ -445,8 +435,8 @@
                 android:orientation="vertical"
                 android:elevation="15dp"
                 android:background="@drawable/white_edge"
-                android:layout_marginStart="5dp"
-                android:layout_marginEnd="5dp"
+                android:layout_marginStart="15dp"
+                android:layout_marginEnd="15dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/customlayout05">
@@ -471,14 +461,13 @@
 
                 <EditText
                     android:id="@+id/num6_1"
-                    android:layout_width="65dp"
+                    android:layout_width="100dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
                     android:background="@android:color/transparent"
                     android:gravity="center"
                     android:inputType="numberDecimal"
-                    android:maxLength="5"
-                    android:imeOptions="actionNext"
+                    android:imeOptions="actionDone"
                     android:textAppearance="@style/TextAppearance.AppCompat.Large"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="@+id/rangeSlider6"
@@ -487,13 +476,12 @@
 
                 <EditText
                     android:id="@+id/num6_2"
-                    android:layout_width="65dp"
+                    android:layout_width="100dp"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="10dp"
                     android:background="@android:color/transparent"
                     android:gravity="center"
                     android:inputType="numberDecimal"
-                    android:maxLength="5"
                     android:imeOptions="actionDone"
                     android:textAppearance="@style/TextAppearance.AppCompat.Large"
                     android:textStyle="bold"
@@ -556,9 +544,11 @@
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/layout2"
-                android:layout_width="390dp"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="30dp"
+                android:layout_marginEnd="30dp"
+                android:layout_marginStart="30dp"
                 android:background="@drawable/white_edge"
                 android:backgroundTint="#516AD5"
                 android:elevation="20dp"
@@ -589,7 +579,7 @@
                         android:id="@+id/addr"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="20dp"
+                        android:layout_marginTop="10dp"
                         android:text="addr"
                         android:textAppearance="@style/TextAppearance.AppCompat.Large"
                         android:textColor="@color/white"
@@ -599,30 +589,58 @@
                         app:layout_constraintTop_toBottomOf="@+id/appCompatImageView" />
 
                     <TextView
+                        android:id="@+id/textView3"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="tel : "
+                        android:textStyle="bold"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginStart="5dp"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                        android:textColor="@color/white"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/addr" />
+
+                    <TextView
                         android:id="@+id/tel"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="20dp"
                         android:text="tel"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginStart="5dp"
                         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                         android:textColor="@color/white"
                         android:textIsSelectable="true"
                         app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toStartOf="@+id/ceo"
-                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintStart_toEndOf="@+id/textView3"
+                        app:layout_constraintTop_toBottomOf="@+id/addr" />
+
+                    <TextView
+                        android:id="@+id/textView4"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginTop="10dp"
+                        android:text="대표 :"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                        android:textColor="@color/white"
+                        android:textStyle="bold"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toEndOf="@+id/tel"
                         app:layout_constraintTop_toBottomOf="@+id/addr" />
 
                     <TextView
                         android:id="@+id/ceo"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginEnd="50dp"
+                        android:layout_marginStart="2dp"
                         android:text="ceo"
                         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                         android:textColor="@color/white"
-                        app:layout_constraintBottom_toBottomOf="@+id/tel"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toTopOf="@+id/tel" />
+                        app:layout_constraintBottom_toBottomOf="@+id/textView4"
+                        app:layout_constraintStart_toEndOf="@+id/textView4"
+                        app:layout_constraintTop_toTopOf="@+id/textView4" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
