설정 페이지 음수처리 및 소수점 처리 완료 mformat으로 만든 부분에서 초기화 설정 가능 찾아봐야됨 모니터링 페이지 수식 적용 임계치 표시 완료

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -804,7 +804,7 @@
                         app:sv_startDegree="180"
                         app:sv_textSize="15dp"
                         app:sv_tickNumber="6"
-                        app:sv_unit="pH"
+                        app:sv_unit="ph"
                         app:sv_withTremble="false">
 
                     </com.github.anastr.speedviewlib.SpeedView>
@@ -924,7 +924,7 @@
                         app:sv_startDegree="180"
                         app:sv_textSize="15dp"
                         app:sv_tickNumber="6"
-                        app:sv_unit="mV"
+                        app:sv_unit="ppt"
                         app:sv_withTremble="false">
 
                     </com.github.anastr.speedviewlib.SpeedView>
@@ -1044,7 +1044,7 @@
                         app:sv_startDegree="180"
                         app:sv_textSize="15dp"
                         app:sv_tickNumber="6"
-                        app:sv_unit="ppt"
+                        app:sv_unit="mV"
                         app:sv_withTremble="false">
 
                     </com.github.anastr.speedviewlib.SpeedView>
