설정페이지 음수 seekbar 수정 setpSize를 0.00f 단위로 설정하면 float 부분에서 오류가 발생한다 때문에 seekbar 데이터를 받아오는 onStopTrackingTouch에서 포멧처리를 해서 원하는 값을 지정해준다

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1165,7 +1165,7 @@
                         app:sv_startDegree="180"
                         app:sv_textSize="15dp"
                         app:sv_tickNumber="6"
-                        app:sv_unit="TUR"
+                        app:sv_unit="NTU"
                         app:sv_withTremble="false">
 
                     </com.github.anastr.speedviewlib.SpeedView>
