folding-cell 라이브러리 ui 변경

--- a/app/src/main/res/layout/activity_login_activty.xml
+++ b/app/src/main/res/layout/activity_login_activty.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#354794">
+    android:background="#8CACF1">
 
     <androidx.cardview.widget.CardView
         android:layout_width="wrap_content"
@@ -34,9 +34,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="스마트 모니터링"
+                android:textSize="30dp"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large"
                 android:textStyle="normal"
-
+                android:fontFamily="@font/juaregular"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
@@ -52,6 +53,7 @@
                 android:hint="아이디"
                 android:layout_marginTop="20dp"
                 android:inputType="text"
+                android:fontFamily="@font/juaregular"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView" />
@@ -63,6 +65,7 @@
                 android:layout_marginTop="20dp"
                 android:ems="10"
                 android:hint="비밀번호"
+                android:fontFamily="@font/juaregular"
                 android:inputType="textPassword"
                 app:layout_constraintEnd_toEndOf="@+id/login_id"
                 app:layout_constraintStart_toStartOf="@+id/login_id"
@@ -76,7 +79,9 @@
                 android:layout_marginTop="20dp"
                 android:background="@color/primary"
                 android:elevation="20dp"
+                android:textSize="20dp"
                 android:text="로그인"
+                android:fontFamily="@font/juaregular"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/login_password" />
