--- a/app/src/main/res/layout/custom_marker_view.xml
+++ b/app/src/main/res/layout/custom_marker_view.xml
@@ -15,6 +15,7 @@
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
         android:text=""
+        android:fontFamily="@font/juaregular"
         android:textSize="12sp"
         android:textColor="@android:color/white"
         android:ellipsize="end"
