--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -22,14 +22,13 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/customlayout01"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="110dp"
                 android:orientation="vertical"
                 android:layout_marginTop="20dp"
                 android:elevation="5dp"
                 android:background="@drawable/white_edge"
                 android:layout_marginStart="15dp"
                 android:layout_marginEnd="15dp"
-
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/layout2">
@@ -40,7 +39,7 @@
                     android:layout_height="wrap_content"
                     android:background="@android:color/transparent"
                     android:gravity="center"
-                    android:text="수온℃"
+                    android:text="수온 ℃"
                     android:fontFamily="@font/juaregular"
                     android:layout_marginTop="5dp"
                     android:textAppearance="@style/TextAppearance.AppCompat.Large"
@@ -50,7 +49,6 @@
                     app:layout_constraintTop_toTopOf="parent">
 
                 </TextView>
-
 
                 <EditText
                     android:id="@+id/num1_1"
@@ -105,7 +103,7 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/customlayout02"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="110dp"
                 android:layout_marginTop="20dp"
                 android:elevation="5dp"
                 android:orientation="vertical"
@@ -187,7 +185,7 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/customlayout03"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="110dp"
                 android:layout_marginTop="20dp"
                 android:elevation="5dp"
                 android:orientation="vertical"
@@ -204,7 +202,7 @@
                     android:layout_height="wrap_content"
                     android:background="@android:color/transparent"
                     android:gravity="center"
-                    android:text="pH"
+                    android:text="pH (pH)"
                     android:fontFamily="@font/juaregular"
                     android:layout_marginTop="5dp"
                     android:textAppearance="@style/TextAppearance.AppCompat.Large"
@@ -241,7 +239,7 @@
                     android:fontFamily="@font/juaregular"
                     android:inputType="numberDecimal"
                     android:imeOptions="actionDone"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Large" android:textStyle="bold"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                     app:layout_constraintBottom_toBottomOf="@+id/rangeSlider3"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/watertank_name03">
@@ -268,7 +266,7 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/customlayout04"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="110dp"
                 android:layout_marginTop="20dp"
                 android:elevation="5dp"
                 android:orientation="vertical"
@@ -285,7 +283,7 @@
                     android:layout_height="wrap_content"
                     android:background="@android:color/transparent"
                     android:gravity="center"
-                    android:text="염도"
+                    android:text="염도 (ppt)"
                     android:fontFamily="@font/juaregular"
                     android:layout_marginTop="5dp"
                     android:textAppearance="@style/TextAppearance.AppCompat.Large"
@@ -349,7 +347,7 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/customlayout05"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="110dp"
                 android:layout_marginTop="20dp"
                 android:elevation="5dp"
                 android:orientation="vertical"
@@ -366,7 +364,7 @@
                     android:layout_height="wrap_content"
                     android:background="@android:color/transparent"
                     android:gravity="center"
-                    android:text="ORP"
+                    android:text="ORP (mV)"
                     android:fontFamily="@font/juaregular"
                     android:textAppearance="@style/TextAppearance.AppCompat.Large"
                     android:layout_marginTop="5dp"
@@ -430,7 +428,7 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/customlayout06"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="110dp"
                 android:layout_marginTop="20dp"
                 android:elevation="5dp"
                 android:layout_marginBottom="20dp"
@@ -448,7 +446,7 @@
                     android:layout_height="wrap_content"
                     android:background="@android:color/transparent"
                     android:gravity="center"
-                    android:text="탁도"
+                    android:text="탁도 (NTU)"
                     android:fontFamily="@font/juaregular"
                     android:layout_marginTop="5dp"
                     android:textAppearance="@style/TextAppearance.AppCompat.Large"
@@ -550,14 +548,15 @@
                 android:id="@+id/layout2"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="15dp"
                 android:layout_marginTop="15dp"
                 android:layout_marginEnd="15dp"
-                android:layout_marginStart="15dp"
                 android:background="@drawable/white_edge"
                 android:backgroundTint="#516AD5"
                 android:elevation="5dp"
                 android:orientation="vertical"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat">
 
@@ -565,7 +564,6 @@
                     android:id="@id/layout3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="15dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent">
@@ -584,12 +582,12 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
-                        android:text="addr"
+                        android:layout_marginStart="15dp"
                         android:fontFamily="@font/juaregular"
+                        android:text="addr"
                         android:textAppearance="@style/TextAppearance.AppCompat.Large"
                         android:textColor="@color/white"
                         android:textStyle="normal"
-                        app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/appCompatImageView" />
 
@@ -597,14 +595,13 @@
                         android:id="@+id/textView3"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="tel : "
-                        android:textStyle="bold"
-                        android:fontFamily="@font/juaregular"
+                        android:layout_marginStart="15dp"
                         android:layout_marginTop="10dp"
-                        android:layout_marginStart="5dp"
+                        android:fontFamily="@font/juaregular"
+                        android:text="tel : "
                         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                         android:textColor="@color/white"
-                        app:layout_constraintBottom_toBottomOf="parent"
+                        android:textStyle="bold"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/addr" />
 
@@ -612,39 +609,38 @@
                         android:id="@+id/tel"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="tel"
-                        android:layout_marginTop="10dp"
                         android:layout_marginStart="5dp"
+                        android:fontFamily="@font/juaregular"
+                        android:text="tel"
                         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                         android:textColor="@color/white"
                         android:textIsSelectable="true"
-                        android:fontFamily="@font/juaregular"
-                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintBottom_toBottomOf="@+id/textView3"
                         app:layout_constraintStart_toEndOf="@+id/textView3"
-                        app:layout_constraintTop_toBottomOf="@+id/addr" />
+                        app:layout_constraintTop_toTopOf="@+id/textView3" />
 
                     <TextView
                         android:id="@+id/textView4"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="10dp"
                         android:layout_marginTop="10dp"
-                        android:text="대표 :"
+                        android:layout_marginStart="15dp"
                         android:fontFamily="@font/juaregular"
+                        android:text="대표 :"
                         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                         android:textColor="@color/white"
                         android:textStyle="bold"
                         app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintStart_toEndOf="@+id/tel"
-                        app:layout_constraintTop_toBottomOf="@+id/addr" />
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
                     <TextView
                         android:id="@+id/ceo"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="2dp"
-                        android:text="ceo"
                         android:fontFamily="@font/juaregular"
+                        android:text="ceo"
                         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                         android:textColor="@color/white"
                         app:layout_constraintBottom_toBottomOf="@+id/textView4"
@@ -660,9 +656,9 @@
                     android:layout_marginTop="15dp"
                     android:layout_marginBottom="20dp"
                     android:elevation="30dp"
-                    android:textSize="20dp"
-                    android:text="임계치 수정 완료"
                     android:fontFamily="@font/juaregular"
+                    android:text="임계치 수정 완료"
+                    android:textSize="20dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
